--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="./images/dice6.png">
+        <img class="img1" src="https://raw.githubusercontent.com/sarxsola/dice-game/main/images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="./images/dice6.png">
+        <img class="img2" src="https://raw.githubusercontent.com/sarxsola/dice-game/main/images/dice6.png">
       </div>
 
     </div>
